commit 903b9e2947c18e38d682ae9bc74fe682d8998412
Author: J. R. Okajima <hooanon05@yahoo.co.jp>
Date:   Tue Aug 16 20:52:05 2011 +0900

    aufs: tiny, fput last in au_do_vm_file_reset()
    
    Signed-off-by: J. R. Okajima <hooanon05@yahoo.co.jp>

commit 33288d54bc47c155574e3015f7a3aeae01508142
Author: J. R. Okajima <hooanon05@yahoo.co.jp>
Date:   Sat Aug 13 04:19:51 2011 +0900

    aufs: tiny, separate the tests for macros
    
    Signed-off-by: J. R. Okajima <hooanon05@yahoo.co.jp>

commit a80d83a3c3809971d1fb296521de0abdcad26e8f
Author: J. R. Okajima <hooanon05@yahoo.co.jp>
Date:   Thu Aug 11 11:06:50 2011 +0900

    aufs: maintain fsync
    
    In linux-2.6.32, vfs_fsync() changed. Aufs just follows it.
    
    This commit is applied to aufs2.2 only, which is for
    linux-2.6.35..linux-2.6.39. It means there may exist a problem around
    fsync in aufs2.1-32..aufs2.1-34.
    
    Signed-off-by: J. R. Okajima <hooanon05@yahoo.co.jp>

commit 2a881ede88db82823e5ae880c00d4c31e4cbe9c6
Author: J. R. Okajima <hooanon05@yahoo.co.jp>
Date:   Thu Aug 11 10:59:40 2011 +0900

    aufs: doc for aufs2.2
    
    Signed-off-by: J. R. Okajima <hooanon05@yahoo.co.jp>

commit ecabe21f85b676e2a6f96e58dfb69214f4892c92
Author: J. R. Okajima <hooanon05@yahoo.co.jp>
Date:   Tue Aug 9 01:09:42 2011 +0900

    aufs: version string for aufs2.2
    
    Signed-off-by: J. R. Okajima <hooanon05@yahoo.co.jp>

commit c5a88fcef606eb6afa82ab66e2b34c3f4d4f8de9
Author: J. R. Okajima <hooanon05@yahoo.co.jp>
Date:   Fri Jul 29 22:19:51 2011 +0900

    aufs: possible bugfix, race between remount and sysrq
    
    Introduce au_sbilist_lock(), au_sbilist_unlock(), and a GFP wrapper
    AuGFP_SBILIST.
    
    Signed-off-by: J. R. Okajima <hooanon05@yahoo.co.jp>

commit 6fbc8128aa89bda340cae797f247f0e9936eb4c6
Author: J. R. Okajima <hooanon05@yahoo.co.jp>
Date:   Wed Jul 27 11:30:42 2011 +0900

    aufs: update donators list
    
    Signed-off-by: J. R. Okajima <hooanon05@yahoo.co.jp>
